--- a/localhost.cfg
+++ b/localhost.cfg
@@ -22,9 +22,9 @@ define host {
     use                     linux-server            ; Name of host template to use
                                                     ; This host definition will inherit all variables that are defined
                                                     ; in (or inherited by) the linux-server host template definition.
-    host_name               Tangqing-Web
-    alias                   Tangqing-Web
-    address                 192.168.100.201
+    host_name               NguiWeily-Web-Server
+    alias                   NguiWeily-Web-Server
+    address                 192.168.100.11
 }
 
 
@@ -42,9 +42,9 @@ define host {
     use                     linux-server            ; Name of host template to use
                                                     ; This host definition will inherit all variables that are defined
                                                     ; in (or inherited by) the linux-server host template definition.
-    host_name               Tangqing-Database
-    alias                   Tangqing-Database
-    address                 192.168.100.202
+    host_name               NguiWeily-Database-Server
+    alias                   NguiWeily-Database-Server
+    address                 192.168.100.12
 }
 
 
@@ -61,7 +61,7 @@ define hostgroup {
 
     hostgroup_name          linux-servers           ; The name of the hostgroup
     alias                   Linux Servers           ; Long name of the group
-    members                 Nagios-Server,Tangqing-Web,Tangqing-Database               ; Comma separated list of hosts that belong to this group
+    members                 Nagios-Server,NguiWeily-Web-Server,NguiWeily-Database-Server               ; Comma separated list of hosts that belong to this group
 }
 
 
@@ -85,14 +85,14 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Tangqing-Web
+    host_name               NguiWeily-Web-Server
     service_description     PING
     check_command           check_ping!100.0,20%!500.0,60%
 }
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Tangqing-Database
+    host_name               NguiWeily-Database-Server
     service_description     PING
     check_command           check_ping!100.0,20%!500.0,60%
 }
@@ -179,7 +179,7 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Tangqing-Web
+    host_name               NguiWeily-Web-Server
     service_description     SSH
     check_command           check_ssh
     notifications_enabled   0
@@ -187,7 +187,7 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Tangqing-Database
+    host_name               NguiWeily-Database-Server
     service_description     SSH
     check_command           check_ssh
     notifications_enabled   0
@@ -209,7 +209,7 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Tangqing-Web
+    host_name               NguiWeily-Web-Server
     service_description     HTTP
     check_command           check_http
     notifications_enabled   0
@@ -217,7 +217,7 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Tangqing-Database
+    host_name               NguiWeily-Database-Server
     service_description     HTTP
     check_command           check_http
     notifications_enabled   0
