--- a/localhost.cfg
+++ b/localhost.cfg
@@ -33,8 +33,8 @@ define host {
     use                     linux-server            ; Name of host template to use
                                                     ; This host definition will inherit all variables that are defined
                                                     ; in (or inherited by) the linux-server host template definition.
-    host_name               Nagios-Server
-    alias                   Nagios-Server
+    host_name               NguiWeily-Nagios-Server
+    alias                   NguiWeily-Nagios-Server
     address                 127.0.0.1
 }
 define host {
@@ -61,7 +61,7 @@ define hostgroup {
 
     hostgroup_name          linux-servers           ; The name of the hostgroup
     alias                   Linux Servers           ; Long name of the group
-    members                 Nagios-Server,NguiWeily-Web-Server,NguiWeily-Database-Server               ; Comma separated list of hosts that belong to this group
+    members                 NguiWeily-Nagios-Server,NguiWeily-Web-Server,NguiWeily-Database-Server               ; Comma separated list of hosts that belong to this group
 }
 
 
@@ -77,7 +77,7 @@ define hostgroup {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Nagios-Server
+    host_name               NguiWeily-Nagios-Server
     service_description     PING
     check_command           check_ping!100.0,20%!500.0,60%
 }
@@ -105,7 +105,7 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Nagios-Server
+    host_name               NguiWeily-Nagios-Server
     service_description     Root Partition
     check_command           check_local_disk!20%!10%!/
 }
@@ -119,7 +119,7 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Nagios-Server
+    host_name               NguiWeily-Nagios-Server
     service_description     Current Users
     check_command           check_local_users!20!50
 }
@@ -133,7 +133,7 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Nagios-Server
+    host_name               NguiWeily-Nagios-Server
     service_description     Total Processes
     check_command           check_local_procs!250!400!RSZDT
 }
@@ -145,7 +145,7 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Nagios-Server
+    host_name               NguiWeily-Nagios-Server
     service_description     Current Load
     check_command           check_local_load!5.0,4.0,3.0!10.0,6.0,4.0
 }
@@ -201,7 +201,7 @@ define service {
 define service {
 
     use                     local-service           ; Name of service template to use
-    host_name               Nagios-Server
+    host_name               NguiWeily-Nagios-Server
     service_description     HTTP
     check_command           check_http
     notifications_enabled   0
