--- a/localhost.cfg
+++ b/localhost.cfg
@@ -59,8 +59,8 @@ define host {
 
 define hostgroup {
 
-    hostgroup_name          linux-servers           ; The name of the hostgroup
-    alias                   Linux Servers           ; Long name of the group
+    hostgroup_name          sddo-servers           ; The name of the hostgroup
+    alias                   Servers for SDDO CWF           ; Long name of the group
     members                 NguiWeily-Nagios-Server,NguiWeily-Web-Server,NguiWeily-Database-Server               ; Comma separated list of hosts that belong to this group
 }
 
@@ -98,7 +98,7 @@ define service {
 }
 
 
-# Define a service to check the disk space of the root partition
+# Define a service to check the disk space of the root partition [local]
 # on the local machine.  Warning if < 20% free, critical if
 # < 10% free space on partition.
 
@@ -106,10 +106,21 @@ define service {
 
     use                     local-service           ; Name of service template to use
     host_name               NguiWeily-Nagios-Server
-    service_description     Root Partition
+    service_description     Root Partition [Local]
     check_command           check_local_disk!20%!10%!/
 }
 
+# Define a service to check the disk space of the root partition [remote]
+# on the local machine.  Warning if < 33% free, critical if
+# < 25% free space on partition.
+
+define service {
+
+    use                     local-service           ; Name of service template to use
+    host_name               NguiWeily-Database-Server
+    service_description     Root Partition [Remote]
+    check_command           check_local_disk!33%!25%!/
+}
 
 
 # Define a service to check the number of currently logged in
@@ -146,10 +157,19 @@ define service {
 
     use                     local-service           ; Name of service template to use
     host_name               NguiWeily-Nagios-Server
-    service_description     Current Load
+    service_description     Current Load [Local]
     check_command           check_local_load!5.0,4.0,3.0!10.0,6.0,4.0
 }
 
+# Define a service to check the load on the remote machine.
+
+define service {
+
+    use                     local-service           ; Name of service template to use
+    host_name               NguiWeily-Web-Server
+    service_description     Current Load [Remote]
+    check_command           check_local_load!6.0,4.0,2.0!12.0,6.0,3.0
+}
 
 
 # Define a service to check the swap usage the local machine.
@@ -222,3 +242,4 @@ define service {
     check_command           check_http
     notifications_enabled   0
 }
+
